--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!-- ref -->
+<!-- ref ui -->
 <!-- https://codepen.io/kalpeshsingh/pen/wMNpLp -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,74 +14,45 @@
     <div class="container">
         <div class="calc-body">
           <div class="calc-screen">
-            <div class="calc-operation">2536 + 419 + </div>
-            <div class="calc-typed">
+            <div class="calc-operation" data-previous-operand></div>
+            <div class="calc-typed" data-current-operand>
               <span class="blink-me">_</span>
             </div>
           </div>
           <div class="calc-button-row">
-            <div class="button c" data-action="c" data-target="">C</div>
-            <div class="button l" data-action="!=" data-target="">≠</div>
-            <div class="button l" data-action="%" data-target="">%</div>
-            <div class="button l" data-action="/" data-target="">/</div>
+            <button class="button c" data-clear>C</button>
+            <button class="button l" data-operation>≠</button>
+            <button class="button l" data-operation>%</button>
+            <button class="button l" data-operation>/</button>
           </div>
           <div class="calc-button-row">
-            <div class="button" data-action="" data-target="7">7</div>
-            <div class="button" data-action="" data-target="8">8</div>
-            <div class="button" data-action="" data-target="9">9</div>
-            <div class="button l" data-action="x" data-target="">x</div>
+            <button class="button" data-number>7</button>
+            <button class="button" data-number>8</button>
+            <button class="button" data-number>9</button>
+            <button class="button l" data-operation>x</button>
           </div>
           <div class="calc-button-row">
-            <div class="button" data-action="" data-target="4">4</div>
-            <div class="button" data-action="" data-target="5">5</div>
-            <div class="button" data-action="" data-target="6">6</div>
-            <div class="button l" data-action="-" data-target="">−</div>
+            <button class="button" data-number>4</button>
+            <button class="button" data-number>5</button>
+            <button class="button" data-number>6</button>
+            <button class="button l" data-operation>−</button>
           </div>
           <div class="calc-button-row">
-            <div class="button" data-action="" data-target="1">1</div>
-            <div class="button" data-action="" data-target="2">2</div>
-            <div class="button" data-action="" data-target="3">3</div>
-            <div class="button l" data-action="+" data-target="">+</div>
+            <button class="button" data-number>1</button>
+            <button class="button" data-number>2</button>
+            <button class="button" data-number>3</button>
+            <button class="button l" data-operation>+</button>
           </div>
           <div class="calc-button-row">
-            <div class="button" data-action="" data-target=".">
-              .
-            </div>
-            <div class="button" data-action="" data-target="0">
-              0
-            </div>
-            <div class="button" data-action="<" data-target="">
-              <
-            </div>
-            <div class="button l" data-action="=" data-target="">
-              =
-            </div>
+            <button class="button" data-number>.</button>
+            <button class="button" data-number>0</button>
+            <button class="button" data-operation><</button>
+            <button class="button l" data-equals>=</button>
           </div>
         </div>
     </div>
 </body>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script>
-  /*========================================
-  Project Name: PureCalc
-  Version: 1.0
-  Author: Kalpesh Singh
-  Inspired From: dribbble.com/oneMoreArray =======================================*/
-  function blinker() {
-      $('.blink-me').fadeOut(200);
-      $('.blink-me').fadeIn(200);
-  }
-  setInterval(blinker, 500);
-
-  // code calculator
-  $('.button').click(function() {
-    var getAction = $(this).attr("data-action");
-    var getValue = $(this).attr("data-target");
-    var num = "" + getValue;
-    if(getValue){
-      console.log(num);
-    }
-  });
-</script>
+<script type="text/javascript" src="main.js"></script>
 </html>
