--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Latihan Membuat Calculator Menggunakan Javascript</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    
 </head>
 <body>
     <div class="container">
+      <center><h4>Aplikasi Kalkulator Sederhana</h4></center>
         <div class="calc-body">
           <div class="calc-screen">
             <div class="calc-operation" data-previous-operand></div>
@@ -21,7 +23,7 @@
           </div>
           <div class="calc-button-row">
             <button class="button c" data-clear>C</button>
-            <button class="button l" data-operation>≠</button>
+            <button class="button l" data-operation>D</button>
             <button class="button l" data-operation>%</button>
             <button class="button l" data-operation>/</button>
           </div>
@@ -46,7 +48,7 @@
           <div class="calc-button-row">
             <button class="button" data-number>.</button>
             <button class="button" data-number>0</button>
-            <button class="button" data-operation><</button>
+            <button class="button" data-operation>+/-</button>
             <button class="button l" data-equals>=</button>
           </div>
         </div>
