--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
           <div class="calc-button-row">
             <button class="button c" data-clear>C</button>
-            <button class="button l" data-operation>D</button>
+            <button class="button l" data-delete>D</button>
             <button class="button l" data-operation>%</button>
             <button class="button l" data-operation>/</button>
           </div>
@@ -48,7 +48,7 @@
           <div class="calc-button-row">
             <button class="button" data-number>.</button>
             <button class="button" data-number>0</button>
-            <button class="button" data-operation>+/-</button>
+            <button class="button" data-manipulate>+/-</button>
             <button class="button l" data-equals>=</button>
           </div>
         </div>
