--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="button" data-number>4</button>
             <button class="button" data-number>5</button>
             <button class="button" data-number>6</button>
-            <button class="button l" data-operation>−</button>
+            <button class="button l" data-operation>-</button>
           </div>
           <div class="calc-button-row">
             <button class="button" data-number>1</button>
